basic_interactive_program_emulation_and_image_with_docker_support/host_bridge_pod.yaml

apiVersion: v1
kind: Pod
metadata:
  name: host-bridge-pod
  labels:
    network: host-bridge
spec:
  containers:
  - name: socat-host-port-forward
    image: alpine/socat:latest
    imagePullPolicy: IfNotPresent
    command: ['sh', '-c']
    args:
      - socat TCP-LISTEN:8101,reuseaddr,fork TCP:$HOST_IP:8202
