basic_interactive_program_emulation_and_image_with_docker_support/host_bridge_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: host-bridge-service
spec:
  clusterIP: 10.43.0.100
  selector:
    network: host-bridge
  ports:
    - protocol: TCP
      port: 8101
      targetPort: 8101
