basic_interactive_program_emulation_and_image_with_docker_support/no-intranet-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-intranet-egress
spec:
  podSelector:
    matchLabels:
      network: no-intranet
  policyTypes:
    - Egress
  egress:
    - to:
        # - ipBlock:
            # cidr: 10.42.0.14/32 # the host-bridge pod.
            # cidr: 10.43.0.100/32 # the host-bridge service.
        - ipBlock:
            cidr: ::/0
            except:
              - fc00::/7
              - fe80::/10
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 0.0.0.0/8
              - 10.0.0.0/8
              - 100.64.0.0/10
              - 169.254.0.0/16
              - 172.16.0.0/12
              - 192.168.0.0/16
